# sc24-ad-ae

./: .gitmodules  README.md
multi-gpu/cloverleaf/: CMakeLists.txt  compile.sh
multi-gpu/cloverleaf/input_file/: clover_bm128_short.in
multi-gpu/cloverleaf/scripts_nvidia/: compile.sh  generate_executables.sh  run_multi_node.sh  slurm_run.sh
multi-gpu/cloverleaf/scripts_pvc/: compile.sh  run.sh
multi-gpu/cloverleaf/src/: PdV.cpp  advection.cpp  clover_leaf.cpp  comms.cpp  field_summary.cpp  freq_map.h  hydro.cpp  initialise.cpp  start.cpp  start.h  sycl_utils.hpp  timestep.cpp  update_halo.cpp
multi-gpu/cloverleaf/test/src_modified/: clover_leaf.cpp  start.h
multi-gpu/miniweather/: compile.sh  run_parse.sh
multi-gpu/miniweather/cpp/: CMakeLists.txt  compile_intel_max_hiding.sh  compile_intel_max_no_hiding.sh  miniWeather_mpi_parallelfor.cpp  miniWeather_mpi_parallelfor_simd_x.cpp  parse_miniweather_results.py  run_miniweather.sh  run_parse.sh
multi-gpu/miniweather/cpp/YAKL/src/: YAKL.h  YAKL_parallel_for_common.h  freq_map.h
multi-gpu/miniweather/cpp/YAKL/src/extensions/: YAKL_pnetcdf.h  YAKL_simd.h
multi-gpu/miniweather/cpp/scripts_miniweather_pvc/: compile_miniweather.sh  run_miniweather.sh
multi-gpu/miniweather/cpp/scripts_nvidia/: compile_miniweather.sh  run.sh  run_multi_node.sh
multi-gpu/miniweather/test/: change_freq.py
multi-gpu/miniweather/test/max_perf/: miniWeather_mpi_parallelfor.cpp
multi-gpu/miniweather/test/min_edp/: miniWeather_mpi_parallelfor.cpp
multi-gpu/miniweather/test/min_energy/: miniWeather_mpi_parallelfor.cpp
multi-gpu/scripts/: find_freq.py
multi-gpu/scripts/plot/: cloverleaf.csv  miniweather.csv  parse_clover.py  parse_mini.py  plot_all.py  plot_single.py  speedup.py
single-gpu/: CMakeLists.txt  README.md  build_phase.sh  build_profiling.sh  run_phase.sh  run_profiling.sh
single-gpu/ace-sycl/: README.md
single-gpu/aop-sycl/: Makefile  aop_main.cpp
single-gpu/config/: README.md
single-gpu/config/app/: ace.conf  aop.conf  metropolis.conf  mnist.conf  srad.conf
single-gpu/config/kernel/: ace.conf  aop.conf  metropolis.conf  mnist.conf  srad.conf
single-gpu/config/phase/: ace.conf  aop.conf  metropolis.conf  mnist.conf  srad.conf
single-gpu/kernel_freq_info/: phases.txt
single-gpu/metropolis-sycl/: Makefile  metropolis_main.cpp
single-gpu/mnist-sycl/: Makefile  kernels.h
single-gpu/scripts/: parse_phase_logs.py
single-gpu/scripts/plots/: compute_speedup.py  phase_results.csv  phase_results_mnist.csv  plot.py
single-gpu/scripts/plots/max1100/: intel_phase_results.csv
single-gpu/scripts/plots/mi100/: phase_results.csv
single-gpu/scripts/plots/v100s/: phase_results.csv  plot_phase_results.py
single-gpu/srad-sycl/: graphics.hpp  srad_main.cpp  timer.hpp
single-gpu/src/ace-sycl/: ace_main.cpp
single-gpu/src/aop-sycl/: README.md
single-gpu/src/metropolis-sycl/: heap.h  utils.h
single-gpu/src/mnist-sycl/: layer.h  mnist_main.cpp
single-gpu/src/srad-sycl/: Makefile  resize.hpp
single-gpu/src/utils/: map_reader.hpp
